???? 1.2.3.0

    user visible changes client:
    * New command resolve, to resolve $() variables in arbitrary text
    * New variable, PRINT_COMMAND_TIME, to control if a command displays time information when it's done. Default set to yes.

    programmer visible changes:
    * Functions bool_int_to_str, str_to_bool_int moved to utils
    * Some fixes to dockutils: modern language usage,
        stopped using the function path_as_string as it had encoding issues,
        replaced readPlistFromString with readPlistFromBytes even though readPlistFromBytes is deprecated.
    * file configVar.py renamed cnfigVarOne.py to avoid conflict with the module who's name is also configVar

2/6/2016 1.2.2.0

    user visible changes client:
    * Fixed the progress count when creating sync sub-folders
    * sync command batch file creates sync folder manifest before and after it does it's work
    * copy command batch file creates sync folder manifest before it does it's work
    * Allow multiple guids per IID
    * New options for Robocopy to reduce verbosity
    * PlatformSpecificHelperMac.unlock will print its output to /dev/null because we do not care for the error message if the items being unlocked do not exists
    * utils.folder_listing adds comments with date the manifest was created and the folder(s) being manifested
    * Fixed ls command to properly handle missing folder and report them in the output

    programmer visible changes:
    * removed readline and colorama from test_import - they are needed only for interactive mode and should not create an error on compilation.
    * New functions InstlClient.create_folder_manifest_command  InstlClient.create_sync_folder_manifest_command
    * Fixed InstlMisc to properly count progress and not display a message about "curr_progress != actual_progress" which was wrong
    * Fixed utils.max_widths to handle empty lists

3/1/2016 1.1.1.0

    user visible changes client: